syntax = "proto3";

option go_package = "scmc/rpc/pb/user";

package user;

service User {
    rpc Signup(SignupRequest) returns (SignupReply) {}
    rpc Login(LoginRequest) returns (LoginReply) {}
    rpc Logout(LogoutRequest) returns (LogoutReply) {}
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordReply) {}

    // 管理员用户/角色管理
    rpc ListUser(ListUserRequest) returns (ListUserReply) {}        // 用户列表
    rpc CreateUser(CreateUserRequest) returns (CreateUserReply) {}  // 创建新用户
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserReply) {}  // 更新用户信息
    rpc RemoveUser(RemoveUserRequest) returns (RemoveUserReply) {}  // 删除用户
    rpc ListRole(ListRoleRequest) returns (ListRoleReply) {}        // 用户角色列表
    rpc CreateRole(CreateRoleRequest) returns (CreateRoleReply) {}  // 创建新角色
    rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleReply) {}  // 更新角色信息
    rpc RemoveRole(RemoveRoleRequest) returns (RemoveRoleReply) {}  // 删除角色
}

message SignupRequest {
    string username = 1;
    string password = 2;
}

message SignupReply {
    // TODO userinfo
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginReply {
    int64  user_id  = 1;
    string auth_key = 2;
    // TODO userinfo
}

message LogoutRequest {}

message LogoutReply {}

message UpdatePasswordRequest {
    string old_password = 1;
    string new_password = 2;
}

message UpdatePasswordReply {
    bool need_relogin = 1;
}

message ListUserRequest {
}

message ListUserReply {
    repeated UserInfo users = 1;
}

message CreateUserRequest {
    UserInfo user_info = 1;
}

message CreateUserReply {
    UserInfo user_info = 1;
}

message UpdateUserRequest {
    UserInfo user_info = 1;
}

message UpdateUserReply {
    UserInfo user_info = 1;
}

message RemoveUserRequest {
    repeated int64 user_ids = 1;
}

message RemoveUserReply {}

message ListRoleRequest {}

message ListRoleReply {
    repeated UserRole roles = 1;
}

message CreateRoleRequest {
    UserRole role_info = 1;
}

message CreateRoleReply {
    UserRole role_info = 1;
}

message UpdateRoleRequest {
    UserRole role_info = 1;
}

message UpdateRoleReply {
    UserRole role_info = 1;
}

message RemoveRoleRequest {
    int64 role_id = 1;
}

message RemoveRoleReply {}

/***** DATA TYPES *****/

enum PERMISSION {
    NONE = 0;

    // 系统
    SYS_INFO_READ  = 1;   // 系统-概要-查看
    SYS_INFO_WRITE = 2;   // 系统-概要-管理(保留设计)
    SYS_PERM_READ  = 11;  // 系统-权限-查看
    SYS_PERM_WRITE = 12;  // 系统-权限-管理

    // 容器
    CONTAINER_INFO_READ  = 1001;  // 容器-信息-查看
    CONTAINER_INFO_WRITE = 1002;  // 容器-信息-管理
    CONTAINER_TEMP_READ  = 1031;  // 容器-模板-查看
    CONTAINER_TEMP_WRITE = 1032;  // 容器-模板-管理

    // 节点
    NODE_INFO_READ  = 2001;  // 节点-信息-查看
    NODE_INFO_WRITE = 2002;  // 节点-信息-管理

    // 镜像
    IMAGE_INFO_READ  = 3001;  // 镜像-信息-查看
    IMAGE_INFO_WRITE = 3002;  // 镜像-信息-管理

    // 审计
    AUDIT_APPROVE_READ  = 4001;  // 审计-审核-查看
    AUDIT_APPROVE_WRITE = 4002;  // 审计-审核-管理
    AUTID_WARN_READ     = 4011;  // 审计-告警-查看
    AUTID_LOG_READ      = 4021;  // 审计-日志-查看
}

message Permission {
    int32 id    = 1;  // enum PERMISSION
    bool  allow = 2;
}

message UserRole {
    int64               id          = 1;
    string              name        = 2;
    bool                is_editable = 3;  // 是否可更新删除, 初始化后不可更改
    int64               created_at  = 4;
    int64               updated_at  = 5;
    repeated Permission perms       = 11;
}

message UserInfo {
    int64    id          = 1;
    string   login_name  = 2;  // 登录名(唯一)
    string   real_name   = 3;  // 真实姓名
    string   password    = 4;  // 用于创建或修改密码
    bool     is_active   = 5;  // 激活状态
    bool     is_editable = 6;  // 是否可更新删除, 初始化后不可更改
    int64    role_id     = 7;  // 用于更新用户角色
    int64    created_at  = 8;
    int64    updated_at  = 9;
    UserRole role_info   = 21;
}
